--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -2,14 +2,14 @@ name: Build & Push to Docker Hub
 
 on:
   pull_request:
-    branches: [main]  
+    branches: [main]
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        service: [GoogleAuthService, TaskService]
+        service: [WebApplication1]
 
     steps:
     - name: Checkout code
@@ -18,10 +18,15 @@ jobs:
     - name: Log in to Docker Hub
       run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
+    - name: Set lowercase image name
+      id: lower
+      run: |
+        echo "image_name=$(echo '${{ matrix.service }}' | tr '[:upper:]' '[:lower:]')" >> $GITHUB_OUTPUT
+
     - name: Build Docker image
       run: |
-        docker build -t ${{ secrets.DOCKER_USERNAME }}/${{ matrix.service | toLower }}:latest ./${{ matrix.service }}
+        docker build -t ${{ secrets.DOCKER_USERNAME }}/${{ steps.lower.outputs.image_name }}:latest ./${{ matrix.service }}
 
     - name: Push Docker image
       run: |
-        docker push ${{ secrets.DOCKER_USERNAME }}/${{ matrix.service | toLower }}:latest
+        docker push ${{ secrets.DOCKER_USERNAME }}/${{ steps.lower.outputs.image_name }}:latest
