--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -18,14 +18,10 @@ jobs:
     - name: Log in to Docker Hub
       run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
-    - name: Set lowercase image name
-      id: lower
-      run: |
-        echo "image_name=$(echo '${{ matrix.service }}' | tr '[:upper:]' '[:lower:]')" >> $GITHUB_OUTPUT
 
     - name: Build Docker image
       run: |
-        docker build -t ${{ secrets.DOCKER_USERNAME }}/wepapplication1:latest ./WebApplication1/WebApplication1
+        docker build -t ${{ secrets.DOCKER_USERNAME }}/webapplication1:latest -f WebApplication1/Dockerfile .
 
 
     - name: Push Docker image
