--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -21,7 +21,7 @@ jobs:
 
     - name: Build Docker image
       run: |
-        docker build -t ${{ secrets.DOCKER_USERNAME }}/webapplication1:latest -f WebApplication1/Dockerfile .
+        docker build -t ${{ secrets.DOCKER_USERNAME }}/webapplication1:latest -f WebApplication1 .
 
 
     - name: Push Docker image
