--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -7,22 +7,25 @@ on:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        service: [WebApplication1]
 
     steps:
-    - name: Checkout implement/Api
+    - name: Checkout code
       uses: actions/checkout@v3
-      
-    - name: List files for debugging
-      run: ls -R
 
     - name: Log in to Docker Hub
       run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
+    - name: Set lowercase image name
+      id: lower
+      run: |
+        echo "image_name=$(echo '${{ matrix.service }}' | tr '[:upper:]' '[:lower:]')" >> $GITHUB_OUTPUT
 
     - name: Build Docker image
       run: |
-        docker build -t ${{ secrets.DOCKER_USERNAME }}/webapplication1:latest -f ./WebApplication1/WebApplication1
-
+        docker build -t ${{ secrets.DOCKER_USERNAME }}/${{ steps.lower.outputs.image_name }}:latest ./${{ matrix.service }}
 
     - name: Push Docker image
       run: |
